module08/httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: NodePort
  selector:
    app: httpserver
  ports:
    - port: 80
      targetPort: 80
