module08/httpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-80
spec:
  ingressClassName: nginx
  rules:
    - host: httpserver.geektime.com
      http:
        paths:
          - backend:
              service:
                name: httpserver-service
                port:
                  number: 80
            path: /
            pathType: Prefix
